--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
-baseurl = "https://djzager.github.io/"
+baseurl = "https://djzager.github.io"
 languageCode = "en-us"
-title = "@djzager"
+title = "David Zager's Personal Website"
+author = "@djzager"
 theme = "kiss"
 copyright = "&copy; <a href=\"https://github.com/djzager\">David Zager</a> 2017"
 disqusShortname = ""
