--- a/config.toml
+++ b/config.toml
@@ -9,6 +9,7 @@ googleAnalytics = ""
 # Number of posts per page
 Paginate = 5
 enableRobotsTXT = true
+enableEmoji = true
 
 [params.assets]
 customCSS = ["css/custom.css"]
